--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -3,5 +3,6 @@ app:
     type:     annotation
 api:
     resource: "@AppBundle/Controller/ApiController.php"
+    #prefix: api/{version}
     prefix: api
     type: rest
