--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -71,10 +71,11 @@ swiftmailer:
 sensio_framework_extra:
     request: { converters: true }
 fos_rest:
+    versioning: true
     body_converter:
         enabled: true
     view:
-        view_response_listener: 'force'
+        view_response_listener: force
         formats:
             json : true
             xml: true
